--- a/.github/workflows/pythonapp_test.yml
+++ b/.github/workflows/pythonapp_test.yml
@@ -22,14 +22,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        ls -la
         pip install -r requirements.txt
     - name: Running The Action
       run: |
-        # pip install flake8
-        # stop the build if there are Python syntax errors or undefined names
-        # flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        # flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-        python3 ""
+        python3 Scrap.py
 
