Edidted python_app.yml

--- a/.github/workflows/pythonapp_test.yml
+++ b/.github/workflows/pythonapp_test.yml
@@ -26,4 +26,13 @@ jobs:
     - name: Running The Action
       run: |
         python3 Scrap.py
+    - name: Commit files
+      run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git commit -m "Added New Corona Data" -a
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
 
