--- a/.github/workflows/pythonapp_test.yml
+++ b/.github/workflows/pythonapp_test.yml
@@ -30,7 +30,8 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git commit -m "Added New Corona Data" -a
+        git add .
+        git commit -m "Added New Corona Data"
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
