--- a/.github/workflows/pythonapp_test.yml
+++ b/.github/workflows/pythonapp_test.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Everyday Data Collections Action
+name: Everyday Minute Collections Action
 
 on:
   schedule:
