--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -1,11 +1,8 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
 name: Everyday Data Collections Action
 
 on:
   schedule:
-    - cron:  '0 23 * * *'
+    - cron: '0 23 * * *'
 
 jobs:
   build:
@@ -16,7 +13,7 @@ jobs:
         python-version: [3.7]
 
     steps:
-#     - uses: actions/checkout@v2
+    - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
@@ -27,10 +24,15 @@ jobs:
         pip install -r requirements.txt
     - name: Running The Action
       run: |
-        # pip install flake8
-        # stop the build if there are Python syntax errors or undefined names
-        # flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        # flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
         python3 Scrap.py
+    - name: Commiting data files
+      run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git add .
+        git commit -m "Added New Corona Data"
+    - name: Pushing corona data
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
 
