--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,9 @@
 _test.py
 old_html_data/
 test.html
-*/__pycache__/
+**/__pycache__/
+**/Tex/
+**/videos/
 
 # on progress but may never be released
 check_missing_data.py
